--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -71,13 +71,14 @@
 
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/google_sign_inbutton"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="80dp"
             android:background="@drawable/btn_signin_google"
-            android:text="@string/signin_facebook"
+            android:text="@string/signin_google"
             android:textColor="@color/colorWhite" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
