--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -59,13 +59,13 @@
             android:text="@string/signin_email" />
 
 
-        <androidx.appcompat.widget.AppCompatButton
+        <com.facebook.login.widget.LoginButton
+            android:id="@+id/facebook_login_button"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="5dp"
-            android:background="@drawable/btn_signin_facebook"
             android:text="@string/signin_facebook"
             android:textColor="@color/colorWhite" />
 
