--- a/app/src/main/res/layout/item_detail.xml
+++ b/app/src/main/res/layout/item_detail.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
         <ImageView
             android:layout_width="35dp"
@@ -24,42 +25,49 @@
             android:id="@+id/detailviewitem_profile_textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="User name"/>
+            android:text="User name" />
     </androidx.appcompat.widget.LinearLayoutCompat>
+
     <ImageView
         android:id="@+id/detailviewitem_imageview_content"
-        android:scaleType="fitXY"
         android:layout_width="match_parent"
-        android:layout_height="250dp"/>
+        android:layout_height="250dp"
+        android:scaleType="fitXY" />
+
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:gravity="center_vertical">
+
         <ImageView
-            android:layout_marginLeft="8dp"
             android:id="@+id/detailviewitem_favorite_imageview"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:src="@drawable/ic_favorite_border"/>
+            android:layout_marginLeft="8dp"
+            android:src="@drawable/ic_favorite_border" />
+
         <ImageView
             android:id="@+id/detailviewitem_comment_imageview"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:src="@drawable/ic_chat_black"/>
+            android:src="@drawable/ic_chat_black" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
+
     <TextView
         android:id="@+id/detailviewitem_favoritecounter_textview"
-        android:text="like 0"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:text="like 0" />
+
     <TextView
+        android:id="@+id/detailviewitem_explain_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:id="@+id/detailviewitem_explain_textview"
-        android:text="Explain content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_marginBottom="35dp"
+        android:text="Explain content" />
 
 
 </androidx.appcompat.widget.LinearLayoutCompat>
